# bibi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
doc/: ElementLifecycle.uxf
src/Core/: Application.cpp  Application.hpp  Component.cpp  Component.hpp  IApplicationBuilder.hpp  Object.cpp  Object.hpp  OpenGLApplicationBuilder.cpp  OpenGLApplicationBuilder.hpp
src/Core/Application/: Application.cpp  Application.hpp  IApplicationBuilder.hpp  OpenGLApplicationBuilder.cpp  OpenGLApplicationBuilder.hpp
src/Core/Concepts/: Lifecycle.hpp  Pointer.hpp
src/Core/Events/: Event.hpp  Function.hpp  IEvent.hpp  IEventPublisher.hpp  IEventSubscriber.hpp
src/Core/Exceptions/: Exception.cpp  Exception.hpp
src/Core/Lifecycle/: DeferredCollection.hpp  ILifecycleAware.hpp
src/Core/UI/: BibiAboutWindowElement.cpp  BibiAboutWindowElement.hpp  BibiMainMenuElement.cpp  BibiMainMenuElement.hpp  ElementTag.cpp  ElementTag.hpp  InspectorWindow.cpp  InspectorWindow.hpp  ObjectListWindow.cpp  ObjectListWindow.hpp
src/Module/: IModule.hpp  IModuleConfigurable.hpp  IModuleDeconstructable.hpp  IModuleRunnable.hpp  ImGuiModule.cpp  ImGuiModule.hpp
src/Module/Gui/: Element.cpp  Element.hpp  IElement.hpp  ImGuiModule.cpp  ImGuiModule.hpp  MenuBarElement.cpp  MenuBarElement.hpp
src/Module/Gui/Elements/: MainMenuBarElement.cpp  MainMenuBarElement.hpp  MenuBarElement.cpp  MenuBarElement.hpp  MenuElement.cpp  MenuElement.hpp  MenuItemElement.cpp  MenuItemElement.hpp  SomeWindow.cpp  SomeWindow.hpp  TextElement.cpp  TextElement.hpp  WindowElement.cpp  WindowElement.hpp
src/Module/ImGui/: ImGuiModule.cpp  ImGuiModule.hpp
src/Module/Logging/: ILogger.hpp  LogModule.cpp  LogModule.hpp  Logger.cpp  Logger.hpp  LoggerModule.cpp  LoggerModule.hpp
src/Modules/: IModule.hpp  IModuleConfigurable.hpp  IModuleDeconstructable.hpp  IModuleRunnable.hpp
src/Modules/Gui/: Element.cpp  Element.hpp  ElementCollection.hpp  IElement.hpp  ImGuiModule.cpp  ImGuiModule.hpp
src/Modules/Gui/Elements/: ButtonElement.cpp  ButtonElement.hpp  MainMenuBarElement.cpp  MainMenuBarElement.hpp  MenuElement.cpp  MenuElement.hpp  MenuItemElement.cpp  MenuItemElement.hpp  TextElement.cpp  TextElement.hpp  TreeNodeElement.cpp  TreeNodeElement.hpp  WindowElement.cpp  WindowElement.hpp
src/Modules/Logging/: Logger.cpp  Logger.hpp  LoggerModule.cpp  LoggerModule.hpp
